fixing thing for Liang Algo